feat: Add service search to provision form
Introduces a search input for services within the service provision form. This allows users to quickly find and select services by name, improving the user experience when registering new provisions.

Includes state management for the search query and results, and adds corresponding translation keys for both Portuguese and English locales.

--- a/locales/pt.json
+++ b/locales/pt.json
@@ -174,7 +174,8 @@
     "deleteProvisionConfirm": "Tem certeza que deseja excluir esta prestação de serviço?",
     "noProvisions": "Nenhuma prestação de serviço registrada.",
     "selectService": "Selecione um serviço",
-    "editProvisionJustificationPrompt": "Por favor, forneça uma justificativa para alterar esta prestação de serviço."
+    "editProvisionJustificationPrompt": "Por favor, forneça uma justificativa para alterar esta prestação de serviço.",
+    "searchServicePlaceholder": "Buscar serviço por nome..."
   },
   "company": {
     "registrationInfo": "Informações Cadastrais",
