--- a/locales/en.json
+++ b/locales/en.json
@@ -174,7 +174,8 @@
     "deleteProvisionConfirm": "Are you sure you want to delete this service provision?",
     "noProvisions": "No service provisions registered.",
     "selectService": "Select a service",
-    "editProvisionJustificationPrompt": "Please provide a justification for editing this service provision."
+    "editProvisionJustificationPrompt": "Please provide a justification for editing this service provision.",
+    "searchServicePlaceholder": "Search for service by name..."
   },
   "company": {
     "registrationInfo": "Registration Information",
