feat(ProfilePage): Allow editing profile type
Adds the ability for users to change their profile type (User/Admin) directly from the profile editing page. This also includes updating the associated translation keys for both English and Portuguese to support this new field.

--- a/locales/en.json
+++ b/locales/en.json
@@ -209,6 +209,8 @@
     "profileName": "Profile Name",
     "loginEmail": "Login (Email)",
     "profileType": "Profile Type",
+    "user": "User",
+    "admin": "Admin",
     "newPassword": "New Password",
     "saveSuccess": "Profile saved successfully!"
   },
